--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,305 @@
-venv
+# ===========================================
+# ENVIRONMENT & CONFIGURATION
+# ===========================================
+# Environment variables (CRITICAL - contains secrets)
+.env
+.env.local
+.env.production
+.env.staging
+.env.development
+*.env
+
+# Configuration files with secrets
+config.ini
+secrets.json
+credentials.json
+
+# ===========================================
+# PYTHON
+# ===========================================
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# ===========================================
+# LOGS & MONITORING
+# ===========================================
+# Log files
+logs/
+*.log
+*.log.*
+log/
+
+# Monitoring data
+monitoring/
+metrics/
+health_checks/
+
+# ===========================================
+# SSL & SECURITY
+# ===========================================
+# SSL certificates and keys
+ssl/
+ssl_config/
+*.crt
+*.key
+*.pem
+*.p12
+*.pfx
+certificates/
+
+# Security files
+secrets/
+keys/
+private/
+
+# ===========================================
+# DATABASE
+# ===========================================
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+database.db
+
+# Database dumps
+*.dump
+*.sql.gz
+backup/
+
+# ===========================================
+# TESTING & COVERAGE
+# ===========================================
+# Test results
+test-results/
+coverage/
+.nyc_output/
+junit.xml
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# Test files (keep local but don't commit)
+test_*.py
+*_test.py
+test-*.py
+test_*.sh
+test-*.sh
+*_test.sh
+populate_test_data.py
+test_population.py
+test_auth.py
+test_endpoints.py
+test_moderation.py
+test_peer_review.py
+test_source_*.py
+run-all-tests.sh
+test-features.sh
+test-frontend-automated.sh
+test-deployment.sh
+test-frontend-features.md
+
+# ===========================================
+# DEPLOYMENT & INFRASTRUCTURE
+# ===========================================
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Kubernetes
+*.kubeconfig
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# Ansible
+*.retry
+
+# ===========================================
+# DEVELOPMENT TOOLS
+# ===========================================
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# ===========================================
+# PROJECT SPECIFIC
+# ===========================================
+# MeiliSearch data
+meilisearch_data/
+
+# Uploaded files (if stored locally)
+uploads/
+media/
+static/uploads/
+
+# Cache directories
+.cache/
+cache/
+
+# Backup files
+*.bak
+*.backup
+backup/
+
+# ===========================================
+# SECRETS & SENSITIVE DATA
+# ===========================================
+# Never commit these!
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+secrets.json
+credentials.json
+auth_tokens.json
+api_keys.json
