--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,56 +1,36 @@
-annotated-types==0.7.0
-anyio==4.9.0
-bcrypt==4.3.0
-certifi==2025.1.31
-cffi==1.17.1
-click==8.1.8
-cryptography==44.0.2
-dnspython==2.7.0
-ecdsa==0.19.1
-email_validator==2.2.0
-fastapi==0.115.12
-fastapi-cli==0.0.7
-greenlet==3.2.0
-h11==0.14.0
-httpcore==1.0.8
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-orjson==3.10.16
-passlib==1.7.4
-psycopg==3.2.6
-pyasn1==0.4.8
-pycparser==2.22
-pydantic==2.11.3
-pydantic-extra-types==2.10.3
-pydantic-settings==2.9.1
-pydantic_core==2.33.1
-Pygments==2.19.1
-python-dotenv==1.1.0
-python-jose==3.4.0
-python-multipart==0.0.20
-PyYAML==6.0.2
-rich==14.0.0
-rich-toolkit==0.14.1
-rsa==4.9.1
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.40
-sqlmodel==0.0.24
-starlette==0.46.2
-typer==0.15.2
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-ujson==5.10.0
-uvicorn==0.34.2
-uvloop==0.21.0
-watchfiles==1.0.5
-websockets==15.0.1
+# Core FastAPI and dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+starlette==0.27.0
+
+# Database and ORM
+sqlmodel==0.0.14
+sqlalchemy==2.0.23
+psycopg[binary]==3.1.13
+
+# Authentication and Security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
+python-multipart==0.0.6
+
+# HTTP and API - compatible versions
+httpx==0.24.1
+httpcore==0.17.3
+requests==2.31.0
+
+# Supabase - compatible version
+supabase==2.1.0
+
+# Search
 meilisearch==0.37.0
-psutil==7.0.0
+
+# Utilities
+python-dotenv==1.0.0
+certifi==2023.11.17
+urllib3==2.0.7
+
+# Monitoring and Logging
+psutil==5.9.6
